--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   --font-large: 3rem;
   --font-medium: 1.5rem;
   --font-small: 1.2rem;
-  --font-xsmall: 1rem;
 
   /* Color */
   --color-skyblue: #00e6e6;
@@ -29,7 +28,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 50px;
+  padding: 30px;
   color: var(--color-white);
 }
 
@@ -52,9 +51,9 @@ main {
 }
 
 .login-form .input {
-  outline: none;
   width: 500px;
   height: 100px;
+  outline: none;
   background-color: rgba(252, 252, 252, 0.6);
   border-bottom: 1px solid white;
   text-shadow: -1px -1px 1px rgba(255, 255, 255, 0.1),
@@ -192,6 +191,7 @@ h2 span {
 
 .counter__title {
   display: inline-block;
+  width: 100%;
   text-shadow: #474747 3px 5px 2px;
   color: var(--color-white);
   margin-bottom: 15px;
@@ -199,6 +199,7 @@ h2 span {
 
 .weather {
   width: 430px;
+  height: auto;
   color: var(--color-skyblue);
   font-size: var(--font-small);
   text-shadow: 2px 2px 0px #ffffff, 5px 4px 0px rgba(0, 0, 0, 0.15);
@@ -212,9 +213,10 @@ h2 span {
 }
 
 .weather__title {
-  text-shadow: #474747 3px 5px 2px;
   display: inline-block;
+  width: 100%;
   color: var(--color-white);
+  text-shadow: #474747 3px 5px 2px;
   margin-bottom: 15px;
 }
 
@@ -333,5 +335,42 @@ h2 span {
   text-decoration: line-through;
 }
 
-/* @media screen and () {
-} */
+@media screen and (max-width: 900px) {
+  :root {
+    /* Font size */
+    --font-large: 2rem;
+    --font-medium: 1rem;
+    --font-small: 0.8rem;
+  }
+
+  body {
+    height: auto;
+    background: url(./imgs/nasa-bg.jpg) cover repeat;
+  }
+
+  .login-form .input {
+    width: 330px;
+    height: 50px;
+  }
+  .login-form .button {
+    width: 50px;
+    height: 50px;
+  }
+
+  .main {
+    flex-direction: column-reverse;
+    padding: 10px;
+  }
+
+  .section__left {
+    margin-right: 0;
+  }
+
+  #quote {
+    width: 400px;
+  }
+  .todo {
+    width: 400px;
+    margin-bottom: 20px;
+  }
+}
