--- a/style.css
+++ b/style.css
@@ -224,7 +224,6 @@ h2 span {
 
 #quote {
   width: 450px;
-  max-width: 700px;
   text-align: center;
   margin: 20px auto;
   padding: 20px;
@@ -253,7 +252,6 @@ h2 span {
 
 .todo {
   width: 450px;
-  max-width: 700px;
   height: 400px;
   border-radius: 20px;
   overflow-y: auto;
@@ -378,5 +376,17 @@ h2 span {
   .todo {
     width: 380px;
     margin-bottom: 20px;
+  }
+
+  #todo-list li {
+    font-size: var(--font-medium);
+  }
+
+  .counter {
+    width: 380px;
+  }
+
+  .weather {
+    width: 380px;
   }
 }
